@startuml
class User {
  +ID: UUID
  +Username: string
  +Email: string
  +PasswordHash: string
}

class Role {
  +ID: UUID
  +Code: string
}

class UserRole {
  +UserID: UUID
  +RoleCode: string
  +OrgID: UUID?
}

class Organization {
  +ID: UUID
  +Name: string
  +Slug: string
  +Type: string
}

class OrgMember {
  +ID: UUID
  +OrgID: UUID
  +UserID: UUID
  +Role: string
}

class Activity {
  +ID: UUID
  +OrgID: UUID
  +Title: string
  +Status: string
  +CoverKey: string
}

class ActivityHistory {
  +ID: UUID
  +ActivityID: UUID
  +OrgID: UUID
  +UserID: UUID
  +Action: string
  +Note: string
}

class LPJ {
  +ID: UUID
  +ActivityID: UUID
  +OrgID: UUID
  +Status: string
  +ReportKey: string
}

class LPJHistory {
  +ID: UUID
  +ActivityID: UUID
  +OrgID: UUID
  +UserID: UUID
  +Action: string
  +Note: string
}

class Surat {
  +ID: UUID
  +Variant: string
  +Subject: string
  +FileKey: string
  +CreatedBy: UUID
}

class SuratTemplate {
  +ID: UUID
  +Name: string
  +Variant: string
}

class RefreshToken {
  +ID: UUID
  +UserID: UUID
  +Token: string
  +ExpiresAt: time
}

class Notification {
  +ID: UUID
  +UserID: UUID
  +Title: string
  +ReadAt: time?
}

class AuditLog {
  +ID: UUID
  +UserID: UUID
  +Action: string
}

User "1" -- "many" UserRole
Role "1" -- "many" UserRole
Organization "1" -- "many" UserRole
Organization "1" -- "many" OrgMember
User "1" -- "many" OrgMember
Organization "1" -- "many" Activity
Activity "1" -- "many" ActivityHistory
Activity "1" -- "0..1" LPJ
LPJ "1" -- "many" LPJHistory
User "1" -- "many" Surat
User "1" -- "many" SuratTemplate
User "1" -- "many" RefreshToken
User "1" -- "many" Notification
User "1" -- "many" AuditLog
@enduml
